# britemdb

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.env  docker-compose.yaml  init_gcp.sh  main.tf  pyproject.toml  sample.env  test_run.sh
app/: main.py
app/api/endpoints/: movies.py
app/core/: application.py  config.py  database.py  logger.py  omdb.py  secure.py  util.py
tests/: conftest.py  movies_star_10.json  movies_star_100.json  test_omdb.py  testconf.env
tests/endpoints/: test_movies.py
