[tool.poetry]
name = "britemdb"
version = "0.1.0"
description = ""
authors = ["Mustafa Elnaquib <melnaquib@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
docker = "^6.0.1"
pytest = "*"
requests = "*"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
gunicorn = "^20.1.0"
fastapi = {extras = ["all"], version = "^0.87.0"}
firestore = "^0.0.8"
install = "^1.3.5"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
fastapi-login = "^1.9.1"
google-cloud-firestore = "^2.12.0"

[tool.poetry.dev-dependencies]
black = "^22.10"
isort = "^5.8.0"
autoflake = "^2.0.0"
mypy = "^0.991"
pytest = "*"
pre-commit = "*"
tox = "*"
pytest-cov = "*"
pytest-asyncio = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
env_override_existing_values = 1
env_files = [".env", "tests/testconf.env"]
filterwarnings = ["ignore::DeprecationWarning"]